--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,17 @@
     "description": "PHP class for CSS colors.",
     "type": "library",
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../Core"
+        }
+    ],
     "require": {
         "php": "^8.4",
         "ext-ctype": "*",
         "ext-mbstring": "*",
-        "galaxon/math": "@dev"
+        "galaxon/core": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0 || ^11.0 || ^12.0"
