--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "galaxon/core": "@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0 || ^11.0 || ^12.0"
+        "phpunit/phpunit": "^10.0 || ^11.0 || ^12.0",
+        "squizlabs/php_codesniffer": "^4.0",
+        "phpstan/phpstan": "^2.1"
     },
     "autoload": {
         "psr-4": {
@@ -29,7 +31,15 @@
         }
     },
     "scripts": {
-        "test": "phpunit",
-        "test:coverage": "php -d xdebug.mode=coverage -r \"require 'vendor/bin/phpunit';\" -- --configuration phpunit.xml --do-not-cache-result --coverage-clover build/logs/clover.xml --coverage-html build/coverage"
+        "fix": "vendor/bin/phpcbf",
+        "check": "vendor/bin/phpcs",
+        "analyse": "vendor/bin/phpstan analyse -l 9",
+        "test": "php -d xdebug.mode=coverage vendor/bin/phpunit --coverage-html build/coverage --coverage-clover build/logs/clover.xml --do-not-cache-result",
+        "quality": [
+            "@fix",
+            "@check",
+            "@analyse",
+            "@test"
+        ]
     }
 }
