Updated phpcs disable comments to be more specific.

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     },
     "scripts": {
         "fix": "vendor/bin/phpcbf",
-        "check": "vendor/bin/phpcs",
+        "check": "vendor/bin/phpcs -s",
         "analyse": "vendor/bin/phpstan analyse -l 9",
         "test": "php -d xdebug.mode=coverage vendor/bin/phpunit --coverage-html build/coverage --coverage-clover build/logs/clover.xml --do-not-cache-result",
         "coverage": "php scripts/coverage-check.php",
