Minor config changes. Removed coverage files from repo.

--- a/composer.json
+++ b/composer.json
@@ -48,13 +48,13 @@
     "scripts": {
         "fix": "vendor/bin/phpcbf",
         "check": "vendor/bin/phpcs -s",
-        "analyse": "vendor/bin/phpstan analyse -l 9",
+        "analyze": "vendor/bin/phpstan analyze -l 9",
         "test": "php -d xdebug.mode=coverage vendor/bin/phpunit --coverage-html build/coverage --coverage-clover build/logs/clover.xml --do-not-cache-result",
         "coverage": "php scripts/coverage-check.php",
         "quality": [
             "@fix",
             "@check",
-            "@analyse",
+            "@analyze",
             "@test",
             "@coverage"
         ]
